增加小說api
